--- a/dbconnection.properties
+++ b/dbconnection.properties
@@ -2,4 +2,4 @@
 #Tue May 19 19:15:18 CEST 2020
 password=password123
 user=postgres
-url=jdbc\:postgresql\://localhost\:5432/employers
+url=jdbc\:postgresql\://localhost\:5432/employees
